--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - name: Checkout kernel source
       run: |
-        git clone https://android.googlesource.com/kernel/gs -b android13-5.15 kernel
+        git clone https://android.googlesource.com/kernel/gs -b android13-5.15-lts kernel
         cd kernel
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
