--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,12 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout kernel source
-      run: |
-        git clone https://android.googlesource.com/kernel/gs -b android13-5.15-lts kernel
-        cd kernel
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+    - name: Checkout kernel common source (android13-5.15-lts)
+  run: |
+    git clone https://android.googlesource.com/kernel/common -b android13-5.15-lts kernel
+    cd kernel
+    git config --global user.name "GitHub Actions"
+    git config --global user.email "actions@github.com"
 
     - name: Setup build environment
       run: |
