--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         sudo apt-get install -y build-essential bc bison flex git kmod cpio libncurses5-dev libssl-dev wget curl
         mkdir -p ~/clang
         cd ~/clang
-        wget https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang+llvm-14.0.6-x86_64-linux-gnu-ubuntu-18.04.tar.xz
+        wget https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang-llvm-14.0.6-x86_64-linux-gnu-ubuntu-18.04.tar.xz
         tar -xf clang+llvm-14.0.6-x86_64-linux-gnu-ubuntu-18.04.tar.xz --strip-components=1
         echo "PATH=$HOME/clang/bin:$PATH" >> $GITHUB_ENV
 
