--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Sync Pixel 7 Pro kernel source
       run: |
         mkdir pixel-kernel && cd pixel-kernel
-        repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android13-5.10-c2
+        repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16
         repo sync -j$(nproc)
         cd ..
 
