--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,69 +1,126 @@
-name: Pixel7Pro-Android13-5.10
+name: Pixel7/7Pro - android-gs-pantah-6.1-android16
 
-on: 
+on:
   workflow_dispatch:
+    inputs:
+      enable_lxc:
+        description: Enable LXC/Docker configs
+        type: boolean
+        required: true
+        default: true
+      enable_kernelsu:
+        description: Enable KernelSU
+        type: boolean
+        required: true
+        default: false
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # Jammy lebih cocok utk toolchain Android
+    runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
-        sudo apt update
-        sudo apt install -y git wget unzip python3 flex bison build-essential bc curl
+        sudo apt-get update
+        sudo apt-get install -y \
+          git curl wget unzip python3 python3-pip python-is-python3 \
+          build-essential bc bison flex ccache rsync \
+          libncurses5-dev libssl-dev zip
 
     - name: Install repo tool
       run: |
-        curl https://storage.googleapis.com/git-repo-downloads/repo > /usr/local/bin/repo
+        curl -o /usr/local/bin/repo https://storage.googleapis.com/git-repo-downloads/repo
         chmod a+x /usr/local/bin/repo
         repo --version
 
-    - name: Sync Pixel 7 Pro kernel source
+    - name: Sync kernel (android-gs-pantah-6.1-android16)
       run: |
-        mkdir pixel-kernel && cd pixel-kernel
+        mkdir -p pixel-kernel && cd pixel-kernel
         repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16
-        repo sync -j$(nproc)
+        # Sedikit optimasi fetch
+        repo sync -j$(nproc) --current-branch --no-tags --optimized-fetch
         cd ..
 
-    - name: Apply patches and config (LXC/Docker)
+    - name: (Optional) Enable LXC & Docker configs
+      if: ${{ inputs.enable_lxc }}
       run: |
-        git clone https://github.com/RONNIE158/GKI-Custom.git gki-patch
-        cp ./gki-patch/config/gki_defconfig ./pixel-kernel/common/arch/arm64/configs/gki_defconfig
-        cd ./pixel-kernel/common
-        git apply ../../gki-patch/patchs/*.patch || true
-        cd ../..
+        # Tambahkan flag ke gki_defconfig (additive, non-invasive)
+        DEFCONFIG="pixel-kernel/common/arch/arm64/configs/gki_defconfig"
+        cat >> "$DEFCONFIG" << 'EOF'
+        # LXC / Docker basics
+        CONFIG_NAMESPACES=y
+        CONFIG_UTS_NS=y
+        CONFIG_IPC_NS=y
+        CONFIG_PID_NS=y
+        CONFIG_NET_NS=y
+        CONFIG_USER_NS=y
+        CONFIG_CGROUPS=y
+        CONFIG_CGROUP_FREEZER=y
+        CONFIG_CGROUP_DEVICE=y
+        CONFIG_CGROUP_PIDS=y
+        CONFIG_CGROUP_CPUACCT=y
+        CONFIG_CGROUP_SCHED=y
+        CONFIG_CPUSETS=y
+        CONFIG_MEMCG=y
+        CONFIG_BLK_CGROUP=y
+        CONFIG_CGROUP_BPF=y
+        CONFIG_BPF_SYSCALL=y
+        CONFIG_BPF_JIT=y
+        CONFIG_SECCOMP=y
+        CONFIG_SECCOMP_FILTER=y
+        CONFIG_KEYS=y
+        CONFIG_VETH=y
+        CONFIG_BRIDGE=y
+        CONFIG_BRIDGE_NETFILTER=y
+        CONFIG_NETFILTER=y
+        CONFIG_NETFILTER_XTABLES=y
+        CONFIG_NF_CONNTRACK=y
+        CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+        CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+        CONFIG_NF_NAT=y
+        CONFIG_NF_TABLES=y
+        CONFIG_IP_NF_IPTABLES=y
+        CONFIG_IP_NF_FILTER=y
+        CONFIG_IP_NF_TARGET_MASQUERADE=y
+        CONFIG_OVERLAY_FS=y
+        CONFIG_EXT4_FS=y
+        CONFIG_BTRFS_FS=y
+        CONFIG_DM_THIN_PROVISIONING=y
+        CONFIG_CGROUP_HUGETLB=y
+        EOF
 
-    - name: Enable KernelSU
+    - name: (Optional) Enable KernelSU
+      if: ${{ inputs.enable_kernelsu }}
       run: |
         cd pixel-kernel
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         cd ..
 
-    - name: Build Kernel
+    - name: Build kernel (Tensor G2)
       run: |
         cd pixel-kernel
-        LTO=thin BUILD_CONFIG=common/build.config.gki.aarch64 build/build.sh
+        # Build config khusus gs-google (Tensor G2) di branch pantah 6.1
+        BUILD_CONFIG=private/gs-google/build.config.gki.aarch64 build/build.sh
         cd ..
 
-    - name: Pack boot.img
+    - name: Collect artifacts
       run: |
-        cd pixel-kernel
-        wget https://dl.google.com/android/gki/gki-certified-boot-android13-5.10-2023-05_r1.zip -O ../gki-certified-boot.zip
-        unzip -q ../gki-certified-boot.zip
-        ./tools/mkbootimg/unpack_bootimg.py --boot_img ../boot-5.10.img
-        ./tools/mkbootimg/mkbootimg.py --header_version 4 \
-          --kernel out/android13-5.10/dist/Image \
-          --ramdisk out/ramdisk \
-          --os_version 13.0.0 \
-          --os_patch_level 2023-11 \
-          -o ../pixel7pro-android13-boot.img
-        cd ..
+        mkdir -p output
+        # artefak utama yang biasanya dihasilkan oleh build.sh utk 6.1 / Android14
+        cp -f pixel-kernel/out/android14-6.1/dist/Image* output/ 2>/dev/null || true
+        cp -f pixel-kernel/out/android14-6.1/dist/dtb.img output/ 2>/dev/null || true
+        cp -f pixel-kernel/out/android14-6.1/dist/dtbo.img output/ 2>/dev/null || true
+        cp -f pixel-kernel/out/android14-6.1/dist/vendor_dlkm.img output/ 2>/dev/null || true
+        # Simpan juga modules archives jika ada
+        cp -f pixel-kernel/out/android14-6.1/dist/*.tar.gz output/ 2>/dev/null || true
+        ls -lah output || true
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: Pixel7Pro-Android13-Kernel
-        path: ./pixel7pro-android13-boot.img
+        name: pixel7-pantah-6.1-android16
+        path: output/**
