--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,22 +1,10 @@
-name: Pixel7/7Pro - android-gs-pantah-6.1-android16
+name: Pixel 7/7 Pro Kernel Build with GKI-LXC Patch
 
 on:
   workflow_dispatch:
-    inputs:
-      enable_lxc:
-        description: Enable LXC/Docker configs
-        type: boolean
-        required: true
-        default: true
-      enable_kernelsu:
-        description: Enable KernelSU
-        type: boolean
-        required: true
-        default: false
 
 jobs:
   build:
-    # Jammy lebih cocok utk toolchain Android
     runs-on: ubuntu-22.04
 
     steps:
@@ -27,100 +15,73 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          git curl wget unzip python3 python3-pip python-is-python3 \
-          build-essential bc bison flex ccache rsync \
-          libncurses5-dev libssl-dev zip
+          git curl wget unzip bc bison build-essential flex gcc clang lld \
+          libssl-dev libncurses5-dev libncursesw5-dev python3 python3-pip \
+          rsync ccache zip repo
 
-    - name: Install repo tool
+    # Sync Pixel 7/7 Pro kernel source
+    - name: Sync Pixel Kernel
       run: |
-        curl -o /usr/local/bin/repo https://storage.googleapis.com/git-repo-downloads/repo
-        chmod a+x /usr/local/bin/repo
-        repo --version
-
-    - name: Sync kernel (android-gs-pantah-6.1-android16)
-      run: |
-        mkdir -p pixel-kernel && cd pixel-kernel
+        mkdir pixel-kernel && cd pixel-kernel
         repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16
-        # Sedikit optimasi fetch
-        repo sync -j$(nproc) --current-branch --no-tags --optimized-fetch
+        repo sync -j$(nproc)
         cd ..
 
-    - name: (Optional) Enable LXC & Docker configs
-      if: ${{ inputs.enable_lxc }}
+    # Clone gki-lxc patch repo
+    - name: Clone gki-lxc
       run: |
-        # Tambahkan flag ke gki_defconfig (additive, non-invasive)
-        DEFCONFIG="pixel-kernel/common/arch/arm64/configs/gki_defconfig"
-        cat >> "$DEFCONFIG" << 'EOF'
-        # LXC / Docker basics
-        CONFIG_NAMESPACES=y
-        CONFIG_UTS_NS=y
-        CONFIG_IPC_NS=y
-        CONFIG_PID_NS=y
-        CONFIG_NET_NS=y
-        CONFIG_USER_NS=y
-        CONFIG_CGROUPS=y
-        CONFIG_CGROUP_FREEZER=y
-        CONFIG_CGROUP_DEVICE=y
-        CONFIG_CGROUP_PIDS=y
-        CONFIG_CGROUP_CPUACCT=y
-        CONFIG_CGROUP_SCHED=y
-        CONFIG_CPUSETS=y
-        CONFIG_MEMCG=y
-        CONFIG_BLK_CGROUP=y
-        CONFIG_CGROUP_BPF=y
-        CONFIG_BPF_SYSCALL=y
-        CONFIG_BPF_JIT=y
-        CONFIG_SECCOMP=y
-        CONFIG_SECCOMP_FILTER=y
-        CONFIG_KEYS=y
-        CONFIG_VETH=y
-        CONFIG_BRIDGE=y
-        CONFIG_BRIDGE_NETFILTER=y
-        CONFIG_NETFILTER=y
-        CONFIG_NETFILTER_XTABLES=y
-        CONFIG_NF_CONNTRACK=y
-        CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-        CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
-        CONFIG_NF_NAT=y
-        CONFIG_NF_TABLES=y
-        CONFIG_IP_NF_IPTABLES=y
-        CONFIG_IP_NF_FILTER=y
-        CONFIG_IP_NF_TARGET_MASQUERADE=y
-        CONFIG_OVERLAY_FS=y
-        CONFIG_EXT4_FS=y
-        CONFIG_BTRFS_FS=y
-        CONFIG_DM_THIN_PROVISIONING=y
-        CONFIG_CGROUP_HUGETLB=y
-        EOF
+        git clone https://github.com/TapetalArray/gki-lxc
 
-    - name: (Optional) Enable KernelSU
-      if: ${{ inputs.enable_kernelsu }}
+    # Apply patches and configs from gki-lxc
+    - name: Apply GKI-LXC patches
       run: |
-        cd pixel-kernel
+        cp ./gki-lxc/gki_defconfig ./pixel-kernel/private/gs-google/arch/arm64/configs/gki_defconfig
+        cd pixel-kernel/private/gs-google
+        git apply ../../../gki-lxc/*.patch || true
+        cd ../../..
+
+    # Enable KernelSU
+    - name: Enable KernelSU
+      run: |
+        cd pixel-kernel/private/gs-google
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
-        cd ..
+        cd ../../..
 
-    - name: Build kernel (Tensor G2)
+    # Build kernel
+    - name: Build Kernel
       run: |
         cd pixel-kernel
-        # Build config khusus gs-google (Tensor G2) di branch pantah 6.1
-        BUILD_CONFIG=private/gs-google/build.config.gki.aarch64 build/build.sh
+        LTO=thin BUILD_CONFIG=private/gs-google/build.config.gki.aarch64 build/build.sh
+
+    # Create boot.img
+    - name: Create boot.img
+      run: |
+        cd pixel-kernel
+        wget https://dl.google.com/android/gki/gki-certified-boot-android12-5.10-2023-05_r8.zip -P ..
+        unzip -q ../gki-certified-boot-android12-5.10-2023-05_r8.zip
+        ./tools/mkbootimg/unpack_bootimg.py --boot_img ../boot-5.10.img
+        ./tools/mkbootimg/mkbootimg.py \
+          --header_version 4 \
+          --kernel out/*/dist/Image \
+          --ramdisk out/ramdisk \
+          --os_version 13.0.0 \
+          --os_patch_level 2023-11 \
+          -o ../pixel7pro-android13-boot-lxc.img
         cd ..
 
-    - name: Collect artifacts
+    # Package with AnyKernel3
+    - name: Package Kernel with AnyKernel3
       run: |
-        mkdir -p output
-        # artefak utama yang biasanya dihasilkan oleh build.sh utk 6.1 / Android14
-        cp -f pixel-kernel/out/android14-6.1/dist/Image* output/ 2>/dev/null || true
-        cp -f pixel-kernel/out/android14-6.1/dist/dtb.img output/ 2>/dev/null || true
-        cp -f pixel-kernel/out/android14-6.1/dist/dtbo.img output/ 2>/dev/null || true
-        cp -f pixel-kernel/out/android14-6.1/dist/vendor_dlkm.img output/ 2>/dev/null || true
-        # Simpan juga modules archives jika ada
-        cp -f pixel-kernel/out/android14-6.1/dist/*.tar.gz output/ 2>/dev/null || true
-        ls -lah output || true
+        git clone https://github.com/osm0sis/AnyKernel3.git
+        cp pixel-kernel/out/*/dist/Image ./AnyKernel3/
+        cd AnyKernel3
+        zip -r9 ../Pixel7Pro-android13-lxc.zip *
 
-    - name: Upload artifacts
+    # Upload artifacts
+    - name: Upload Kernel
       uses: actions/upload-artifact@v4
       with:
-        name: pixel7-pantah-6.1-android16
-        path: output/**
+        name: Pixel7Pro-Kernel
+        path: |
+          pixel7pro-android13-boot-lxc.img
+          Pixel7Pro-android13-lxc.zip
