--- a/.github/workflows/ceetah.yml
+++ b/.github/workflows/ceetah.yml
@@ -1,4 +1,4 @@
-name: Pixel 7 Pro Kernel Build (Cheetah)
+name: Pixel 7 / 7 Pro Kernel Build (Pantah)
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
     - name: Install dependencies
       run: |
@@ -24,10 +24,10 @@ jobs:
         chmod a+x ~/bin/repo
         echo "PATH=~/bin:$PATH" >> $GITHUB_ENV
 
-    - name: Sync Pixel Kernel (Cheetah)
+    - name: Sync Pixel Kernel (Pantah)
       run: |
         mkdir pixel-kernel && cd pixel-kernel
-        repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android14-6.1
+        repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16
         repo sync -j$(nproc)
 
     - name: Clone Google kernel build scripts
@@ -49,7 +49,7 @@ jobs:
         LTO=thin BUILD_CONFIG=$BUILD_CONFIG ./build/build.sh
 
     - name: Upload Kernel Image
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: Pixel7Pro-kernel
         path: pixel-kernel/out/android*/dist/*
