--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Clone kernel source
       run: |
-        git clone https://android.googlesource.com/kernel/common -b android13-5.15 kernel
+        git clone https://android.googlesource.com/kernel/common -b android-gs-pantah-6.1-android16 kernel
 
     - name: Add LXC & Docker configs
       run: |
