--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     # Sync Pixel 7/7 Pro kernel source
     - name: Sync Pixel Kernel
       run: |
-        mkdir pixel-kernel && cd pixel-kernel
+        mkdir kernel && cd kernel
         repo init --depth=1 -u https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16
         repo sync -j$(nproc)
         cd ..
