--- a/.github/workflows/test-lagi.yml
+++ b/.github/workflows/test-lagi.yml
@@ -37,7 +37,7 @@ jobs:
     # Clone Pixel 7/7 Pro kernel source
     - name: Clone Pixel Kernel Source
       run: |
-        git clone https://android.googlesource.com/kernel/manifest -b android-gs-pantah-6.1-android16 kernel
+        git clone https://android.googlesource.com/kernel/common -b android-gs-pantah-6.1-android16 kernel
 
     - name: Build Kernel
       run: |
